--- a/frontend/public/stylesheets/splash/splash.css
+++ b/frontend/public/stylesheets/splash/splash.css
@@ -2,10 +2,16 @@
     display: flex;
     flex-direction: row; 
     margin: 0 auto; 
-    width: 88%;
+    width: 80%;
 }
 
 .splash-left{
     height: 700px; 
-    width: 40%; 
+    width: 50%;
+    background: #80d4f5; 
+}
+
+.splash-right{
+    width: 50%;
+    background: black; 
 }
