--- a/frontend/public/stylesheets/session/signup-form.css
+++ b/frontend/public/stylesheets/session/signup-form.css
@@ -10,7 +10,7 @@ body {
     /* justify-content: center;  */
     margin: 0 auto; 
     margin-top: 69px;
-    background: white; 
+    background: #f8e187
 }
 
 .signup-header{
