--- a/frontend/public/stylesheets/questions/question_create.css
+++ b/frontend/public/stylesheets/questions/question_create.css
@@ -62,8 +62,8 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.question-create-submit:hover { 
-    color: #f2c40f;
+.question-create-submit:hover {   
+    background-color: #f2c40f;
     
 }
 
