--- a/frontend/public/stylesheets/splash/splash.css
+++ b/frontend/public/stylesheets/splash/splash.css
@@ -3,11 +3,13 @@
     flex-direction: row; 
     margin: 0 auto; 
     width: 100%;
+    height: 100%; 
     margin-top: 80px;
+    background: black;
 }
 
 .splash-left{
-    height: 720px; 
+    height: 820px; 
     width: 50%;
     display: flex; 
     overflow: hidden;
@@ -42,6 +44,7 @@
 }
 
 .splash-right{
+    height: 820px;
     width: 50%;
     background: white; 
 }
