--- a/frontend/public/stylesheets/questions/question.css
+++ b/frontend/public/stylesheets/questions/question.css
@@ -193,6 +193,10 @@ a:-webkit-any-link {
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
+.downvoteIndex:hover {
+    color: #f2c40f;
+}
+
 .downvoteIndex:hover *{
     color: #f2c40f;
 }
