--- a/frontend/public/stylesheets/questions/question_answers.css
+++ b/frontend/public/stylesheets/questions/question_answers.css
@@ -16,13 +16,27 @@
     font-weight: bold;
 }
 
+.chartjs-render-monitor{
+    object-fit: contain; 
+}
+
 .graph-buisness{
-    width: 100%;
+    width: auto;
+    height: auto;
     display: flex;
+    margin-bottom: 30px;
+}
+
+.total-population-graph *{
+    position: relative;  
 }
 .total-population-graph{
+    display: flex;
+    flex-direction: column; 
+    justify-content: center; 
     text-align: center;
     width: 50%; 
+    min-height: 100%; 
     border: 1px solid black;
     padding-bottom: 30px;
 }
@@ -34,18 +48,20 @@
 }
 
 .question-answer-right{
-    /* height: 100%; */
     width: 50%;
+    height: auto;
     display: flex;
     flex-direction: column; 
 }
 
 .age-graph{
     height: 50%;
+    padding: 0 30px 10px 30px;
     border: 1px solid black;
 }
 
 .gender-graph{
     height: 50%;
+    padding: 0 30px 10px 30px;
     border: 1px solid black;
 }
