--- a/frontend/public/stylesheets/navbar/navbar.css
+++ b/frontend/public/stylesheets/navbar/navbar.css
@@ -6,6 +6,8 @@ body {
     height: 100%;
     margin: 0;
     top: 0;
+    background: #f8e187;
+    height: 100%;
 }
 .vsc-initialized{
     background: #f8e187
