small design changes

--- a/frontend/public/stylesheets/questions/question_answers.css
+++ b/frontend/public/stylesheets/questions/question_answers.css
@@ -24,7 +24,7 @@
     width: auto;
     height: auto;
     display: flex;
-    margin-bottom: 30px;
+    padding-bottom: 50px;
 }
 
 .total-population-graph *{
