--- a/frontend/public/stylesheets/navbar/navbar.css
+++ b/frontend/public/stylesheets/navbar/navbar.css
@@ -6,18 +6,18 @@ body {
     height: 100%;
     margin: 0;
     top: 0;
-    background: #f8e187;
+    background: black;
     height: 100%;
 }
 .vsc-initialized{
-    background: #f8e187
+    background: black
 }
 .app-page{
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-    height: 100%;
+    min-height: 800px;
     width: 100%;
     background: #f8e187
 }
